load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")

buildifier(
    name = "buildifier",
)

cc_binary(
    name = "leak",
    srcs = ["leak.cpp"],
)

load("@rules_foreign_cc//foreign_cc:defs.bzl", "configure_make")

configure_make(
    name = "valgrind",
    out_binaries = ["valgrind"],
    autogen = True,
    configure_in_place = True,
    lib_source = "@valgrind//:all_files",
)
